welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  verifier;
    if (vuBiscuit) {
      return true;
    } else {
      droite;
      avance;
      gauche;
      verifier;
    }

}   

def verifier {
    var vuBiscuit=false
    for (i<- 1 to 6) {
      avance;
      if (estSurBiscuit) {
        vuBiscuit=true;
      }
    }
    for (i<-1 to 6) {
      recule
    }
}

